Command handler modernization